<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName"
        android:textColor="#000000"
        tools:targetApi="o" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/radioRed" />

        <RadioButton
            android:id="@+id/radioOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/radioOrange" />

        <RadioButton
            android:id="@+id/radioYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:text="@string/radioYellow" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/radioGreen" />

        <RadioButton
            android:id="@+id/radioLightBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:text="@string/radioLightBlue" />

        <RadioButton
            android:id="@+id/radioDarkBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:text="@string/radioDarkBlue" />

        <RadioButton
            android:id="@+id/radioViolet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violet"
            android:text="@string/radioViolet" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button" />
</LinearLayout>